# sorting-algorithms

./: .gitignore  CMakeLists.txt  main.cpp
algorithms/: SortAlgorithm.cpp  SortAlgorithm.h
algorithms/BubbleSort/: Bubble.cpp  Bubble.h
algorithms/MergeSort/: Merge.cpp  Merge.h
algorithms/SelectionSort/: Selection.cpp  Selection.h
